Modificadores de acceso: `public` y `private`
C++ nos permite decir que atributos y métodos son privados, accesibles
solo por los métodos de la clase y cuales son públicos, accesibles
por cualquier otro código.

Los modificadores de acceso `public` y `private` toman efecto
desde que son definidas hasta el final del `struct` o hasta que
aparece otro modificador.

Lenguajes como Ruby y Java tienen conceptos similares. Golang
también aunque usa una convención de nombres para determinar que es público
y que es privado. En C y Python, en cambio, no tienen y dependen de
convenciones y documentación..

Poner las cosas privadas y solo exponer una mínima interfaz pública es
extraordinariamente útil.

Si tenes una interfaz pública chica es fácil de revisarla y verificarla.

Si modificas un método público, puede que introduzcas un bug en
cualquier parte del programa mientras que si el método es privado, el
"splash damage" esta acotado a solo el TDA.

Menos tiempo de testing, menos tiempo de debugging.

El ejemplo clásico de una mala interfaz es poner en socket_t un método
publico que exponga el file descriptor interno `get_fd`. Con eso, en
cualquier parte del programa alguien podría hacer `close(skt.get_fd())`
y cerrar el socket sin que el TDA lo sepa. Anda a encontrar ese bug.

No importa en que lenguaje estés, poner las cosas privadas y
solo exponer una mínima interfaz pública es extraordinariamente útil.

Extra: hay otro modificador de acceso que tiene relevancia con herencia:
`protected`. Lo veremos más adelante.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,4 +15,4 @@ line,+whitespace/parens,+whitespace/semicolon"]
     rev: 9a9bbc00895bbdb7670231c2565d4f1309c42905  # SHA of v1.3.5
     hooks:
       - id: cppcheck
-        args: ["--enable=warning,style,information", "--language=c++", "--std=c++17", "--error-exitcode=1"]
+        args: ["--enable=warning,style,information", "--language=c++", "--std=c++17", "--error-exitcode=1", "--suppress=noConstructor"]
